syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-swagger/options/annotations.proto";

package flipt;

option go_package = "flipt";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
	info: {
		title: "Flipt API";
		version: "latest";
		contact: {
			name: "Mark Phelps";
			url: "https://github.com/markphelps/flipt";
			email: "mark.aaron.phelps@gmail.com";
		};
	};
	external_docs: {
		url: "https://flipt.dev";
		description: "Flipt Docs";
	}
	schemes: HTTP;
	schemes: HTTPS;
	consumes: "application/json";
	produces: "application/json";
};

message EvaluationRequest {
  string request_id = 1;
  string flag_key = 2;
  string entity_id = 3;
  map<string, string> context = 4;
}

message EvaluationResponse {
  string request_id = 1;
  string entity_id = 2;
  map<string, string> request_context = 3;
  bool match = 4;
  string flag_key = 5;
  string segment_key = 6;
  google.protobuf.Timestamp timestamp = 7;
  string value = 8;
  double request_duration_millis = 9;
}

message Flag {
  string key = 1;
  string name = 2;
  string description = 3;
  bool enabled = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  repeated Variant variants = 7;
}

message FlagList {
  repeated Flag flags = 1;
}

message GetFlagRequest {
  string key = 1;
}

message ListFlagRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message CreateFlagRequest {
  string key = 1;
  string name = 2;
  string description = 3;
  bool enabled = 4;
}

message UpdateFlagRequest {
  string key = 1;
  string name = 2;
  string description = 3;
  bool enabled = 4;
}

message DeleteFlagRequest {
  string key = 1;
}

message Variant {
  string id = 1;
  string flag_key = 2;
  string key = 3;
  string name = 4;
  string description = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message CreateVariantRequest {
  string flag_key = 1;
  string key = 2;
  string name = 3;
  string description = 4;
}

message UpdateVariantRequest {
  string id = 1;
  string flag_key = 2;
  string key = 3;
  string name = 4;
  string description = 5;
}

message DeleteVariantRequest {
  string id = 1;
  string flag_key = 2;
}

message Segment {
  string key = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  repeated Constraint constraints = 6;
}

message SegmentList {
  repeated Segment segments = 1;
}

message GetSegmentRequest {
  string key = 1;
}

message ListSegmentRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message CreateSegmentRequest {
  string key = 1;
  string name = 2;
  string description = 3;
}

message UpdateSegmentRequest {
  string key= 1;
  string name = 2;
  string description = 3;
}

message DeleteSegmentRequest {
  string key = 1;
}

enum ComparisonType {
  UNKNOWN_COMPARISON_TYPE = 0;
  STRING_COMPARISON_TYPE = 1;
  NUMBER_COMPARISON_TYPE = 2;
  BOOLEAN_COMPARISON_TYPE = 3;
}

message Constraint {
  string id = 1;
  string segment_key = 2;
  ComparisonType type = 3;
  string property = 4;
  string operator = 5;
  string value = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message CreateConstraintRequest {
  string segment_key = 1;
  ComparisonType type = 2;
  string property = 3;
  string operator = 4;
  string value = 5;
}

message UpdateConstraintRequest {
  string id = 1;
  string segment_key = 2;
  ComparisonType type = 3;
  string property = 4;
  string operator = 5;
  string value = 6;
}

message DeleteConstraintRequest {
  string id = 1;
  string segment_key = 2;
}

message Rule {
  string id = 1;
  string flag_key = 2;
  string segment_key = 3;
  repeated Distribution distributions = 4;
  int32 rank = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message RuleList {
  repeated Rule rules = 1;
}

message ListRuleRequest {
  int32 limit = 1;
  int32 offset = 2;
  string flag_key = 3;
}

message GetRuleRequest {
  string id = 1;
  string flag_key = 2;
}

message CreateRuleRequest {
  string flag_key = 1;
  string segment_key = 2;
  int32 rank = 3;
}

message UpdateRuleRequest {
  string id = 1;
  string flag_key = 2;
  string segment_key = 3;
}

message DeleteRuleRequest {
  string id = 1;
  string flag_key = 2;
}

message OrderRulesRequest {
  string flag_key = 1;
  repeated string rule_ids = 2;
}

message Distribution {
  string id = 1;
  string rule_id = 2;
  string variant_id = 3;
  float rollout = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreateDistributionRequest {
  string flag_key = 1;
  string rule_id = 2;
  string variant_id = 3;
  float rollout = 4;
}

message UpdateDistributionRequest {
  string id = 1;
  string flag_key = 2;
  string rule_id = 3;
  string variant_id = 4;
  float rollout = 5;
}

message DeleteDistributionRequest {
  string id = 1;
  string flag_key = 2;
  string rule_id = 3;
  string variant_id = 4;
}

service Flipt {
  rpc Evaluate(EvaluationRequest) returns (EvaluationResponse) {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			description: "Evaluate";
			tags: "evaluate";
    };
  }

  rpc GetFlag(GetFlagRequest) returns (Flag) {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			description: "Get Flag";
			tags: "flags";
    };
  }

  rpc ListFlags(ListFlagRequest) returns (FlagList) {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			description: "List Flags";
			tags: "flags";
    };
  }

  rpc CreateFlag(CreateFlagRequest) returns (Flag) {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			description: "Create Flag";
			tags: "flags";
    };
  }

  rpc UpdateFlag(UpdateFlagRequest) returns (Flag) {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			description: "Update Flag";
			tags: "flags";
    };
  }

  rpc DeleteFlag(DeleteFlagRequest) returns (google.protobuf.Empty) {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			description: "Delete Flag";
			tags: "flags";
    };
  }

  rpc CreateVariant(CreateVariantRequest) returns (Variant) {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			description: "Create Variant";
			tags: "variants";
    };
  }

  rpc UpdateVariant(UpdateVariantRequest) returns (Variant) {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			description: "Update Variant";
			tags: "variants";
    };
  }

  rpc DeleteVariant(DeleteVariantRequest) returns (google.protobuf.Empty) {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			description: "Delete Variant";
			tags: "variants";
    };
  }

  rpc GetRule(GetRuleRequest) returns (Rule) {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			description: "Get Rule";
			tags: "rules";
    };
  }

  rpc ListRules(ListRuleRequest) returns (RuleList) {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			description: "List Rules";
			tags: "rules";
    };
  }

  rpc OrderRules(OrderRulesRequest) returns (google.protobuf.Empty) {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			description: "Order Rules";
			tags: "rules";
    };
  }

  rpc CreateRule(CreateRuleRequest) returns (Rule) {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			description: "Create Rule";
			tags: "rules";
    };
  }

  rpc UpdateRule(UpdateRuleRequest) returns (Rule) {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			description: "Update Rule";
			tags: "rules";
    };
  }

  rpc DeleteRule(DeleteRuleRequest) returns (google.protobuf.Empty) {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			description: "Delete Rule";
			tags: "rules";
    };
  }

  rpc CreateDistribution(CreateDistributionRequest) returns (Distribution) {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			description: "Create Distribution";
			tags: "distributions";
    };
  }

  rpc UpdateDistribution(UpdateDistributionRequest) returns (Distribution) {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			description: "Update Distribution";
			tags: "distributions";
    };
  }

  rpc DeleteDistribution(DeleteDistributionRequest) returns (google.protobuf.Empty) {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			description: "Delete Distribution";
			tags: "distributions";
    };
  }

  rpc GetSegment(GetSegmentRequest) returns (Segment) {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			description: "Get Segment";
			tags: "segments";
    };
  }

  rpc ListSegments(ListSegmentRequest) returns (SegmentList) {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			description: "List Segments";
			tags: "segments";
    };
  }

  rpc CreateSegment(CreateSegmentRequest) returns (Segment) {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			description: "Create Segment";
			tags: "segments";
    };
  }

  rpc UpdateSegment(UpdateSegmentRequest) returns (Segment) {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			description: "Update Segment";
			tags: "segments";
    };
  }

  rpc DeleteSegment(DeleteSegmentRequest) returns (google.protobuf.Empty) {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			description: "Delete Segment";
			tags: "segments";
    };
  }

  rpc CreateConstraint(CreateConstraintRequest) returns (Constraint) {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			description: "Create Constraint";
			tags: "constraints";
    };
  }

  rpc UpdateConstraint(UpdateConstraintRequest) returns (Constraint) {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			description: "Update Constraint";
			tags: "constraints";
    };
  }

  rpc DeleteConstraint(DeleteConstraintRequest) returns (google.protobuf.Empty) {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
			description: "Delete Constraint";
			tags: "constraints";
    };
  }
}
